Fixed bug: - previous bug: when screen width was small enough, buttons at top of screen would overlap with main text - fix: added padding to top and bottom of main content

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,8 @@ h1 {
 }
 
 .vertical-stack {
+	padding-top: 50px;
+	padding-bottom: 50px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
